WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132507
[iOS WK2] Tiled layer content missing on pages with animated tiled layers
https://bugs.webkit.org/show_bug.cgi?id=132507
Summary
[iOS WK2] Tiled layer content missing on pages with animated tiled layers
Simon Fraser (smfr)
Reported
2014-05-02 18:02:04 PDT
[iOS WK2] Tiled layer content missing on pages with animated tiled layers
Attachments
Patch
(5.15 KB, patch)
2014-05-02 18:11 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-05-02 18:11:39 PDT
Created
attachment 230725
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-05-02 18:12:10 PDT
<
rdar://problem/16765740
>
Tim Horton
Comment 3
2014-05-02 18:13:34 PDT
Comment on
attachment 230725
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=230725&action=review
> Source/WebCore/ChangeLog:11 > + trigger repeated layer flushes. With UI-side compositing, those
triggering?
Simon Fraser (smfr)
Comment 4
2014-05-02 18:15:56 PDT
https://trac.webkit.org/r168217
mitz
Comment 5
2014-08-31 00:00:16 PDT
(In reply to
comment #4
)
>
https://trac.webkit.org/r168217
This caused
bug 136410
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug